Bug fix: homepage map on mobile
The map's wrapping div needs a minimum height to render on the page.

Fixes #8

--- a/app/assets/stylesheets/modules/_homepage.scss
+++ b/app/assets/stylesheets/modules/_homepage.scss
@@ -19,3 +19,7 @@
 #main-container [data-map="home"] .leaflet-control-container .search-control a:hover {
   //color: $white;
 }
+
+#wrapper-map {
+  min-height:400px;
+}
